...
                modifier = Modifier
                    .scale(scaleLogo.value)
                    .fillMaxWidth()
                    .align(CenterHorizontally)
                    .testTag("LogoListScreen")
            )
            SearchBar(
                hint = "Search...",
                modifier = Modifier
                    .fillMaxWidth()
                    .padding(16.dp)
            ) {
                viewModel.searchPokemonList(it)
...
